--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
-    "geist": "1.2.2",
     "clsx": "^2.1.1",
+    "geist": "1.2.2",
+    "graphql": "^16.11.0",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
