--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "geist": "1.2.2",
     "graphql": "^16.11.0",
-    "next": "canary",
+    "next": "15.4.3",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
     "react": "18.2.0",
